[tool.poetry]
name = "python-starter"
version = "0.1.0"
description = "A Python starter template with Poetry and tox."
authors = ["Philipp Page <github@philipp-page.de>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
isort = "^5.10.1"
black = "^21.11b1"
flake8 = "^4.0.1"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
files="python_starter/"
ignore_missing_imports=true
